--- a/index.html
+++ b/index.html
@@ -115,9 +115,25 @@
   // 1) Intercept fetch to use worker + auto id_token
   var _fetch = window.fetch.bind(window);
   function isGAS(url){ try{var u=new URL(url, location.href); return u.hostname==='script.google.com' && /\/macros\/s\//.test(u.pathname);}catch(e){return false;} }
-  
-/* Duplicate fetch override disabled (using primary interceptor) */
-;
+  window.fetch = async function(input, init){
+    var url = (typeof input==='string') ? input : (input && input.url) || '';
+    if (!url) return _fetch(input, init);
+    if (isGAS(url)){
+      var method = (init && init.method) || 'GET';
+      var base = endpoint(); var t = token();
+      if (method.toUpperCase()==='GET'){
+        var qs=''; try{var u=new URL(url, location.href); qs=u.search.slice(1);}catch(e){qs=''}
+        var prox = base + (base.indexOf('?')>=0?'&':'?') + qs;
+        if (t && !/[?&]id_token=/.test(prox)) prox += (prox.indexOf('?')>=0?'&':'?') + 'id_token='+encodeURIComponent(t);
+        return _fetch(withCorsProxy(prox), { method:'GET' });
+      } else {
+        var body=(init&&init.body)||''; if (typeof body!=='string'){ try{ if(body&&body.toString) body=body.toString(); }catch(e){ body=''; } }
+        var p=new URLSearchParams(String(body||'')); if (t && !p.get('id_token')) p.set('id_token', t);
+        return _fetch(base, { method:'POST', headers:{'Content-Type':'application/x-www-form-urlencoded'}, body:p.toString() });
+      }
+    }
+    return _fetch(input, init);
+  };
 
   // 2) Normalize NADI items for both actions
   function whenRUMUS(cb){ if (window.RUMUS) return cb(); var n=0, iv=setInterval(function(){ n++; if(window.RUMUS){clearInterval(iv); cb();} if(n>200) clearInterval(iv); },50); }
@@ -254,7 +270,19 @@
 </script>
 
   <!-- Google Identity Services (Sign-In) -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+  (function(){
+    try{
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
+      if (!tok){
+        var s = document.createElement('script');
+        s.src = 'https://accounts.google.com/gsi/client';
+        s.async = true; s.defer = true;
+        document.head.appendChild(s);
+      }
+    }catch(e){}
+  })();
+  </script>
 
   <!-- html2canvas untuk tangkap preview → imej (BARU) -->
   <script defer src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
@@ -5153,7 +5181,7 @@ if (btn) {
 
   // 3) Patch loader "Sejarah Saringan" jika wujud
   var _origLoadPrograms = window.loadPrograms;
-  window._legacy_loadPrograms = async function(){
+  window.loadPrograms = async function(){
     const list = document.getElementById('programList');
     if (!list) { if (typeof _origLoadPrograms === 'function') return _origLoadPrograms(); else return; }
     list.innerHTML = '<div class="text-muted text-center p-3">Memuat program…</div>';
@@ -5378,8 +5406,8 @@ if (btn) {
   // Override global (simpanan asal, jika perlu)
   window._origLoadPrograms = window.loadPrograms;
   window._origLoadProgramDetail = window.loadProgramDetail;
-  window._legacy_loadPrograms = loadPrograms;
-  window._legacy_loadProgramDetail = loadProgramDetail;
+  window.loadPrograms = loadPrograms;
+  window.loadProgramDetail = loadProgramDetail;
 
   // Interaksi
   document.addEventListener('click', (e)=>{
@@ -5723,14 +5751,26 @@ if (btn) {
   if (document.readyState === 'loading'){ document.addEventListener('DOMContentLoaded', onHash); } else { onHash(); }
 
   // Expose globals expected by other code (compatibility)
-  window._legacy_loadPrograms = loadPrograms;
-  window._legacy_loadProgramDetail = loadProgramDetail;
+  window.loadPrograms = loadPrograms;
+  window.loadProgramDetail = loadProgramDetail;
 })();
 </script>
 
 
 <!-- Google Identity (wajib untuk id_token) -->
-<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script>
+  (function(){
+    try{
+      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
+      if (!tok){
+        var s = document.createElement('script');
+        s.src = 'https://accounts.google.com/gsi/client';
+        s.async = true; s.defer = true;
+        document.head.appendChild(s);
+      }
+    }catch(e){}
+  })();
+  </script>
 <script>
 (() => {
   'use strict';
@@ -5759,7 +5799,19 @@ if (btn) {
     }catch(e){ return {}; }
   }
 
-  async function apiGet(params){
+  
+  const CORS_PROXY = 'https://cors.isomorphic-git.org/';
+  function withCorsProxy(url){
+    try{
+      const u = new URL(url, location.href);
+      if (u.hostname.includes('script.google.com') || u.hostname.includes('googleusercontent.com')){
+        // Always proxy cross-origin GAS calls to avoid CORS noise
+        return CORS_PROXY + url;
+      }
+    }catch(e){}
+    return url;
+  }
+async function apiGet(params){
     if(!SCRIPT_URL || SCRIPT_URL.startsWith('PASTE_')) throw new Error('SCRIPT_URL belum ditetapkan');
     if(!ID_TOKEN) throw new Error('Belum log masuk');
     const q=new URLSearchParams({...params, id_token: ID_TOKEN});
